--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,19 @@
 spring.application.name=SpringBootWebTutorial
 server.port=8087
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:file:C:/Users/ataka/IdeaProjects/SpringBootWebTutorial/db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=atakanDB
+spring.datasource.password=Atakan123
+
+# H2 Console Settings
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=false
+
+# JPA/Hibernate Settings
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
